Bug 625012 - Handle multipart responses in ImageDocument::OnStartRequest correctly. r=bz